--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
         "babel-preset-vue-app": "^1.3.1",
         "cross-env": "^5.1.1",
         "es6-promise": "^4.1.1",
+        "iscroll": "5.1.0",
         "lavas-core-vue": "^1.1.11",
         "normalize.css": "^7.0.0",
         "stoppable": "^1.0.4",
-        "vuetify": "^0.17.5",
-        "iscroll": "5.1.0"
+        "vue-style-loader": "^4.1.0",
+        "vuetify": "^0.17.5"
     },
     "devDependencies": {
         "express": "^4.16.2",
