--- a/package.json
+++ b/package.json
@@ -11,34 +11,69 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "buildqa": "node build/build.js -qa"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "coordtransform": "^2.1.2",
+    "es6-promise": "^4.1.0",
+    "fastclick": "^1.0.6",
+    "hammerjs": "^2.0.8",
+    "iscroll": "^5.2.0",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
+    "raw-loader": "^0.5.1",
+    "rxjs": "^5.5.2",
+    "sortablejs": "1.4.2",
+    "swiper": "^3.4.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-awesome-swiper": "^2.6.7",
+    "vue-lazyload": "^1.0.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
-    "sw-precache-webpack-plugin": "^0.11.4",
     "babel-eslint": "^8.0.1",
+    "babel-helpers": "^6.23.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-component": "^0.9.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-async-to-module-method": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "babel-runtime": "^6.23.0",
+    "chai": "^4.1.2",
     "chalk": "^2.1.0",
+    "chromedriver": "^2.33.1",
     "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.1.1",
+    "cross-env": "^5.0.5",
+    "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "eslint": "^4.9.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
-    "eslint-config-standard": "^10.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
@@ -46,10 +81,10 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "cross-env": "^5.0.5",
+    "inject-loader": "^3.0.1",
     "karma": "^1.7.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -59,32 +94,33 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.5",
+    "lolex": "^1.5.2",
     "mocha": "^4.0.1",
-    "chai": "^4.1.2",
-    "sinon": "^4.0.1",
-    "sinon-chai": "^2.14.0",
-    "inject-loader": "^3.0.1",
-    "babel-plugin-istanbul": "^4.1.5",
-    "phantomjs-prebuilt": "^2.1.15",
-    "chromedriver": "^2.33.1",
-    "cross-spawn": "^5.1.0",
     "nightwatch": "^0.9.16",
-    "selenium-server": "^3.6.0",
-    "semver": "^5.4.1",
-    "shelljs": "^0.7.8",
+    "node-sass": "^4.7.2",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
+    "phantomjs-prebuilt": "^2.1.15",
+    "postcss-px2rem": "^0.3.0",
     "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.3",
+    "selenium-server": "^3.6.0",
+    "semver": "^5.4.1",
+    "shelljs": "^0.7.8",
+    "sinon": "^4.0.1",
+    "sinon-chai": "^2.14.0",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.3",
+    "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.7.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0",
-    "uglify-es": "^3.1.3"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
