--- a/.babelrc
+++ b/.babelrc
@@ -6,9 +6,17 @@
         "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
       }
     }],
-    "stage-2"
+    "stage-0"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": [
+    "transform-object-rest-spread",
+    "transform-runtime", 
+    "syntax-async-functions",
+    ["transform-async-to-module-method", {
+      "module": "bluebird",
+      "method": "coroutine"
+    }]
+  ],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
