--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "iscroll": "^5.2.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "mockjs": "^1.0.1-beta3",
     "raw-loader": "^0.5.1",
     "rxjs": "^5.5.2",
     "sortablejs": "1.4.2",
